examples/test/testpolicy8697.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8697
  namespace: namespace23
spec:
  podSelector:
    matchLabels:
      key25: value17
      key37: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value41
          key46: value47
          key16: value47
      podSelector:
        matchLabels:
          key41: value40
